# aura-control

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_system.py
aura-ai/services/: telemetry_client.py
aura-core/: CMakeLists.txt
aura-core/src/: server.cpp
docker/: Dockerfile
proto/: actuators.proto
scripts/: generate_protos.sh
