[project]
name = "aura-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "nanobind>=2.12.0",
    "numpy>=2.4.2",
    "scikit-build-core>=0.12.1",
    "scikit-learn>=1.8.0",
]
